[package]
name = "dxgcap"
version = "0.2.4"
authors = ["jojo <jo@jo.zone>"]
description = "Screen capturing with DXGI for Windows in Rust"
repository = "https://github.com/bryal/dxgcap-rs"
documentation = "https://docs.rs/dxgcap/*/x86_64-pc-windows-msvc/dxgcap/"
readme = "README.md"
keywords = ["Windows", "DXGI", "screen", "record", "capture"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = [
    "d3d11",
    "d3dcommon",
    "dxgi",
    "dxgi1_2",
    "dxgitype",
    "ntdef",
    "unknwnbase",
    "windef",
    "winerror",
    "winuser",
] }
wio = "0.2.2"
opencv = { version = "0.93.4", optional = true }

[features]
default = []
cv = ["opencv"]
